--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@
             <li>Russian (native)</li>
             <li>English (intermediate)</li>
           </ul>
+          <footer>
+            <div>
+              <a href="https://github.com/lyana-m"><img src="/assets/icons8-github-30.png" alt="github-icon"></a>
+              <a href="https://vk.com/id11885661"><img src="/assets/icons8-vk.com-30.png" alt="vk-icon"></a>
+              <a href="https://ru.linkedin.com/"><img src="/assets/icons8-linkedin-30.png" alt="linledin-icon"></a>
+            </div>
+          </footer>
       </aside>
       <main>
-        <h1>Butolina Lyanna</h1>
+        <header>
+          <h1>Butolina Lyanna</h1>
+        </header>
         <h2>Junior front end developer</h2>
         <p class="description">Beginning front end developer who is passionate exploring new technologies, self-improvement and leveraging skills. Excellent team player with exceptional communication skills. As a highly motivated individual want to create high quality products.</p>
         <h3>Education</h3>
@@ -66,11 +75,11 @@
           </section>            
           <section>
             <h3>Code examples</h3>
-            <pre><code><p>
+            <pre><code>
 function squareDigits(num) {
   return +(String(num).split('').map(item => item ** 2).join(''));
-}</p></code></pre>
-            <pre><code><p>
+}</code></pre>
+            <pre><code>
 function createDreamTeam(members) {
   if (Array.isArray(members)) {
   return members.reduce((acc, item) => {
@@ -82,9 +91,9 @@ function createDreamTeam(members) {
     }, '')
     split('').sort().join('').toUpperCase();
   } return false;
-}</p></code></pre>
+}</code></pre>
           </section>
       </main>
-    </div>    
+    </div>        
   </body>
 </html>
