--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <div class="main-container">
     <aside>
       <div class="photo">
-        <img src="/assets/photo (1).png" alt="">
+        <img src="./assets/photo (1).png" alt="">
       </div>
       <h3>Contacts</h3>
       <ul>
