--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </ul>
       <footer>
         <div>
-          <a href="https://github.com/lyana-m"><img src="/assets/icons8-github-30.png" alt="github-icon"></a>
-          <a href="https://vk.com/id11885661"><img src="/assets/icons8-vk.com-30.png" alt="vk-icon"></a>
-          <a href="https://ru.linkedin.com/"><img src="/assets/icons8-linkedin-30.png" alt="linledin-icon"></a>
+          <a href="https://github.com/lyana-m"><img src="./assets/icons8-github-30.png" alt="github-icon"></a>
+          <a href="https://vk.com/id11885661"><img src="./assets/icons8-vk.com-30.png" alt="vk-icon"></a>
+          <a href="https://ru.linkedin.com/"><img src="./assets/icons8-linkedin-30.png" alt="linledin-icon"></a>
         </div>
       </footer>
     </aside>
