резюме на русском

--- a/index.html
+++ b/index.html
@@ -8,130 +8,125 @@
   <title>CV Butolina</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <div class="main-container">
-    <aside>
-      <div class="photo">
-        <img src="./assets/photo (1).png" alt="">
-      </div>
-      <h3>Contacts</h3>
+    <div class="name">
+      <h1>Лянна Бутолина</h1>
+    </div>
+    <div class="introduction">
+      <div class="introduction-content">Я начинающий фронтенд-разработчик, увлеченный изучением новых технологий,
+        применением их на практике и самосовершенствоанием. Обладаю высокой мотивацией и самоорганизацией. Умею работать
+        в команде, искать компромиссы для достижения наилучшего результата.</div>
+    </div>
+    <div class="aside">
+      <h3>Контакты</h3>
       <ul>
-        <li class="contacts">Address
+        <li class="contacts">Адрес:
           <p>Perm, Russia</p>
         </li>
-        <li class="contacts">Phone
+        <li class="contacts">Телефон:
           <p>+79617585199</p>
         </li>
-        <li class="contacts">E-mail
+        <li class="contacts">E-mail:
           <p>lyana-m@yandex.ru</p>
         </li>
+        <li class="contacts">Github:
+          <p><a href="https://github.com/lyana-m" target="_blank">https://github.com/lyana-m</a></p>
+        </li>
       </ul>
-      <h3>Pro skills</h3>
+      <h3>Технологии</h3>
       <ul>
         <li>HTML5</li>
-        <li>CSS3</li>
-        <li>SASS</li>
-        <li>BEM</li>
-        <li>Tailwind</li>
-        <li>JavaScript</li>
-        <li>React, Redux, React-Router</li>
-        <li>Vue, Vuex, Vue-Router</li>
-        <li>Nuxt</li>
+        <li>CSS3, SCSS, BEM, Tailwind</li>
+        <li>JavaScript, TypeScript</li>
+        <li>React, React-Router</li>
+        <li>Redux, Redux-Toolkit, MobX</li>
+        <li>Jest, React testing library</li>
         <li>Git</li>
+        <li>Figma</li>
       </ul>
-      <h3>Languages</h3>
+      <h3>Дополнительно</h3>
       <ul>
-        <li>Russian (C1)</li>
-        <li>English (A2)</li>
+        <li>English B2</li>
       </ul>
-      <footer>
-        <div>
-          <a href="https://github.com/lyana-m"><img src="./assets/icons8-github-30.png" alt="github-icon"></a>
-          <a href="https://vk.com/id11885661"><img src="./assets/icons8-vk.com-30.png" alt="vk-icon"></a>
-          <a href="https://ru.linkedin.com/"><img src="./assets/icons8-linkedin-30.png" alt="linledin-icon"></a>
-        </div>
-      </footer>
-    </aside>
-    <main>
-      <header>
-        <h1>Butolina Lyanna</h1>
-      </header>
-      <h2>Junior front end developer</h2>
-      <p class="description">Beginning front end developer who is passionate exploring new technologies,
-        self-improvement and leveraging skills. Excellent team player with exceptional communication skills. As a highly
-        motivated individual want to create high quality products.</p>
-      <h3>Education</h3>
-      <section class="column-container">
-        <div class="detail-info">
-          <p class="detail-info__date">2009-2014</p>
-          <div class="detail-info__description">
-            <h4>Perm State University</h4>
-            <p>Faculty Of Economics, Global Economy</p>
-          </div>
-        </div>
-      </section>
-      <h3>Experience</h3>
-      <section class="column-container">
-        <div class="detail-info">
-          <p class="detail-info__date">2013-2021</p>
-          <div class="detail-info__description">
-            <h4>The 3rd support / Translation agency</h4>
-            <p>Patent attorney assistant</p>
-          </div>
-        </div>
-        <div class="detail-info">
-          <p class="detail-info__date">08/2021</p>
-          <div class="detail-info__description">
-            <h4>Creonit / digital production</h4>
-            <p>Trainee</p>
-          </div>
-        </div>
-      </section>
-      <section>
-        <h3>Projects</h3>
-        <div class="project">
-          <div class="project__name"><a href="https://github.com/lyana-m/online-zoo" target="_blank">ONLINE-ZOO</a>
-          </div>
-          <div class="project__description">A multi-page virtual zoo website</div>
+    </div>
+    <div class="detail">
+      <h3>Образование</h3>
+      <ul>
+        <li class="detail-info education">
+          <h4>Perm State University | 2014</h4>
+          <p>Faculty Of Economics, Global Economy</p>
+        </li>
+        <li class="detail-info education">
+          <h4>THE ROLLING SCOPES SCHOOL | 2021</h4>
+          <p>Javascript/Front-End 2021Q1</p>
+        </li>
+        <li class="detail-info education">
+          <h4>UDEMY | 2021</h4>
+          <p>React - The Complete Guide (incl Hooks, React Router, Redux)</p>
+        </li>
+      </ul>
+      <h3>Опыт работы</h3>
+      <ul>
+        <li class="detail-info experience">
+          <h4>Бюро переводов "Третья опора" | 2013-2021</h4>
+          <p>Переводчик патентной литературы</p>
+        </li>
+        <li class="detail-info experience">
+          <h4>Creonit / digital production | 08/2021</h4>
+          <p>Стажер</p>
+        </li>
+        <li class="detail-info experience">
+          <h4>ГНИВЦ | 03/2022</h4>
+          <p>Стажер</p>
+        </li>
+      </ul>
+      <h3>Проекты</h3>
+      <ul>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://github.com/lyana-m/online-zoo" target="_blank">ONLINE-ZOO</a>
+          </span>
+          <span class="project__description">| Многостраничный сайт онлайн-зоопарка</span>
           <div class="project__technology">HTML5, SCSS, JavaScript</div>
-        </div>
-        <div class="project">
-          <div class="project__name"><a href="https://github.com/lyana-m/async-race" target="_blank">ASYNC-RACE</a>
-          </div>
-          <div class="project__description">SPA, a retro racing game, interacting with the server API</div>
+        </li>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://github.com/lyana-m/async-race" target="_blank">ASYNC-RACE</a>
+          </span>
+          <span class="project__description">| SPA, ретро-игра "гоночки", взаимодействующая с серверным API</span>
           <div class="project__technology">HTML5, SCSS, JavaScript</div>
-        </div>
-        <div class="project">
-          <div class="project__name"><a href="https://github.com/lyana-m/match-match-game" target="_blank">MATCH-MATCH
-              GAME</a></div>
-          <div class="project__description">SPA, a game used to train memory</div>
+        </li>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://github.com/lyana-m/match-match-game" target="_blank">MATCH-MATCH
+              GAME</a></span>
+          <span class="project__description"> | SPA, игра для тренировки памяти</span>
           <div class="project__technology">HTML5, SCSS, TypeScript, indexedDb</div>
-        </div>
-        <div class="project">
-          <div class="project__name"><a href="https://github.com/lyana-m/english-for-kids-client"
-              target="_blank">ENGLISH FOR KIDS</a>
-          </div>
-          <div class="project__description">SPA, an application for learning English words</div>
+        </li>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://github.com/lyana-m/english-for-kids-client"
+              target="_blank">ENGLISH
+              FOR KIDS</a>
+          </span>
+          <span class="project__description"> | SPA, приложение для изучения английских слов</span>
           <div class="project__technology">HTML5, SCSS, Typescript, React, Redux for client-side, Expsess for
             server-side, MongoDb</div>
-        </div>
-        <div class="project">
-          <div class="project__name"><a href="https://github.com/lyana-m/techzavrr" target="_blank">TECHNOZAVRR</a>
-          </div>
-          <div class="project__description">SPA, online-shop</div>
+        </li>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://github.com/lyana-m/techzavrr" target="_blank">TECHNOZAVRR</a>
+          </span>
+          <span class="project__description">| SPA, онлайн-магазин</span>
           <div class="project__technology">HTML5, SCSS, JavaScript, Vue, Vuex, Vue-Router</div>
-        </div>
-        <div class="project">
-          <div class="project__name"><a>JOOBY</a></div>
-          <div class="project__description">SPA, online education platform</div>
-          <div class="project__technology">HTML5, SCSS, JavaScript, Vue, Nuxt</div>
-        </div>
-      </section>
-    </main>
+        </li>
+        <li class="detail-info project">
+          <span class="project__name"><a href="https://laughing-dubinsky-4ef918.netlify.app" target="_blank">MOVIES</a>
+          </span>
+          <span class="project__description">| SPA, учебное приложение по поиску фильмов</span>
+          <div class="project__technology">HTML5, SCSS, Typescript, React, MobX</div>
+        </li>
+      </ul>
+    </div>
   </div>
 </body>
 
